FIX SPACING

--- a/css/main.bundle.css
+++ b/css/main.bundle.css
@@ -3792,6 +3792,11 @@ body {
   }
 }
 
+.\[\&\>p\]\:my-0>p{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .\[\&_\*\]\:w-full *{
   width: 100%;
 }
